--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </ul>
                         </div>
                     </div>
-                    <img id="logo" src="imgpic.png" alt="Nathan" class="home__image" style="border-radius: 20%;">
+                    <img id="logo" src="img/imgpic.png" alt="Nathan" class="home__image" style="border-radius: 20%;">
                 </div>
             </div>
         </section>
@@ -330,7 +330,7 @@
                 <div class="grid portfolio__wrapper">
                     <!--========== project 1 ============-->
                     <div class="portfolio__card">
-                        <img src="Crudasp.jpg" alt="Project title" class="portfolio__image">
+                        <img src="img/Crudasp.jpg" alt="Project title" class="portfolio__image">
                         <span class="portfolio__category">CRUD Web App</span>
                         <h3 class="portfolio__title">Created a Web app using ASP.NET and ADO.net.</h3>
                         <a href="https://github.com/Arvind761/CRUD-using-.net" class="btn btn--primary">
@@ -341,7 +341,7 @@
                     
                     <!--========== project 2 ============-->
                     <div class="portfolio__card">
-                        <img src="news.jpg" alt="Project title" class="portfolio__image">
+                        <img src="img/news.jpg" alt="Project title" class="portfolio__image">
                         <span class="portfolio__category">News App</span>
                         <h3 class="portfolio__title">Using BootStrap, ReactJS and newsWeb API!</h3>
                         <a href="https://github.com/Arvind761/NewsApp" class="btn btn--primary">
@@ -352,7 +352,7 @@
                     </div>
                     <!--========== project 3 ============-->
                     <div class="portfolio__card">
-                        <img src="CrudCore.jpg" alt="Project title" class="portfolio__image">
+                        <img src="img/CrudCore.jpg" alt="Project title" class="portfolio__image">
                         <span class="portfolio__category">CRUD API</span>
                         <h3 class="portfolio__title">Using .net Core WEB API.</h3>
                         <a href="https://github.com/Arvind761/CURD-.net-Core-web-API-" class="btn btn--primary">
